--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "jsmediatags": "^3.9.7",
     "next": "11.1.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sweetalert2": "^11.1.4",
+    "sweetalert2-react-content": "^4.1.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
