--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.0.1",
     "jsmediatags": "^3.9.7",
     "next": "11.1.1",
+    "next-pwa": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "sweetalert2": "^11.1.4",
