--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "MSH",
     "icons": [
       {
-        "src": "/vercel.svg",
-        "type": "image/svg+xml"
+        "src": "/favicon.ico",
+        "sizes": "72x72 96x96 128x128 256x256"
       }
     ],
     "theme_color": "#FFFFFF",
